2013-06-02 Riccardo Mottola <rm@gnu.org>

	* AppController.h
	* AppController.m
	* LMFlipView.m
	* English.lproj/LaternaMagica.nib
	Route printing to the FlipView and sart print operation from there.

2013-06-02 Riccardo Mottola <rm@gnu.org>

	* LMImage.m
        Correctly add successive rotations.

2013-05-27: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* AppController.m, LMFlipView.m
	  revert stuff from yesterday, and only leave the 
	  l and r keys work

2013-05-26: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* AppController.m
	  make rotation clockwise
	* LMFlipView.m
	  add r, f, l keys to performKeyEquivalent:, to call
	  rotateImage90, 180, 270 to be able to rotate with
	  keyboard in full screen mode

2013-02-12 Riccardo Mottola <rm@gnu.org>

	* AppController.h
	Fix warning and transition to NSInteger

2013-02-08: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* FileTable.m
	  int -> NSInteger transition

2013-01-18 Riccardo Mottola <rm@gnu.org>

	* AppController.h
	* AppController.m
	* FileTable.h
	* FileTable.m
	* Resources/LaternaMagica.gorm
	Show image count

2013-01-09 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Call directly rotate byAngle method, so that redrawing twice is avoided.

2013-01-09 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Separate rotation method from actions.

2013-01-08 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Remember image rotation

2013-01-08 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Invoke correct method.

2013-01-08 Riccardo Mottola <rm@gnu.org>

	* LMImage.h
	* LMImage.m
	New class to hold specific image information.

	* AppController.m
	* FileTable.h
	* FileTable.m
	* GNUMakefile
	Use the new LMImage class to hold information instead of several arrays.

2013-01-04 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Make "Add" work recursively again.

	* FileTable.h
	* FileTable.m
	Extract recursive path search into a method.

2013-01-01 Riccardo Mottola <rm@gnu.org>
